--- a/gleam.toml
+++ b/gleam.toml
@@ -17,6 +17,10 @@ gleam_stdlib = ">= 0.34.0"
 gleam_otp = ">= 0.10.0"
 gleamdb = { path = "../gleamdb" }
 gleam_erlang = ">= 1.3.0 and < 2.0.0"
+argv = ">= 1.0.0"
+gleam_http = ">= 3.0.0"
+gleam_json = ">= 1.0.0"
+gleam_httpc = ">= 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
