--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,7 @@ argv = ">= 1.0.0"
 gleam_http = ">= 3.0.0"
 gleam_json = ">= 1.0.0"
 gleam_httpc = ">= 2.0.0"
+mist = ">= 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
