--- a/gleam.toml
+++ b/gleam.toml
@@ -13,15 +13,17 @@ version = "1.0.0"
 # https://gleam.run/writing-gleam/gleam-toml/.
 
 [dependencies]
-gleam_stdlib = ">= 0.34.0"
+gleam_stdlib = ">= 0.40.0"
 gleam_otp = ">= 0.10.0"
 gleamdb = { path = "../gleamdb" }
-gleam_erlang = ">= 1.3.0 and < 2.0.0"
+gleam_erlang = ">= 0.25.0"
 argv = ">= 1.0.0"
-gleam_http = ">= 3.0.0"
+gleam_http = ">= 3.6.0"
 gleam_json = ">= 1.0.0"
 gleam_httpc = ">= 2.0.0"
 mist = ">= 1.0.0"
+gleam_hackney = ">= 1.0.0"
+sqlight = ">= 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
